--- a/webClient/src/app/app.html
+++ b/webClient/src/app/app.html
@@ -1,1 +1,14 @@
-<h1>{{title()}}</h1>
+<div class="card bg-base-100 w-1/5 mx-auto p-10 mt-10 shadow-xl">
+  <h3 class="text-3xl text-red-500">{{ title() }}</h3>
+  <ul class="list">
+    @for (user of appUsers(); track user.id) {
+      <li class="list-row items-center">
+        <img ngSrc="/user.png" alt="USer avatar" class="size-12 rounded-box" height="450" width="450">
+        <div>
+          {{ user.userName }}
+        </div>
+      </li>
+    }
+  </ul>
+</div>
+
