--- a/webClient/src/layouts/nav/nav.html
+++ b/webClient/src/layouts/nav/nav.html
@@ -17,10 +17,10 @@
       <a href="/">Messages</a>
     </nav>
     <div class="flex align-middle ml-auto gap-3">
-      <form class="flex items-center gap-3">
-        <input type="text" placeholder="Email" class="input">
-        <input type="password" placeholder="Password" class="input">
-        <button class="btn">Login</button>
+      <form #loginForm="ngForm" (ngSubmit)="login()" class="flex items-center gap-3">
+        <input [(ngModel)]="creds.email" name="email" type="text" placeholder="Email" class="input">
+        <input [(ngModel)]="creds.password" name="password" type="password" placeholder="Password" class="input">
+        <button type="submit" class="btn">Login</button>
       </form>
     </div>
   </div>
