--- a/webClient/src/layouts/nav/nav.html
+++ b/webClient/src/layouts/nav/nav.html
@@ -17,11 +17,24 @@
       <a href="/">Messages</a>
     </nav>
     <div class="flex align-middle ml-auto gap-3">
-      <form #loginForm="ngForm" (ngSubmit)="login()" class="flex items-center gap-3">
-        <input [(ngModel)]="creds.email" name="email" type="text" placeholder="Email" class="input">
-        <input [(ngModel)]="creds.password" name="password" type="password" placeholder="Password" class="input">
-        <button type="submit" class="btn">Login</button>
-      </form>
+      @if (accountService.currentUser(); as user) {
+        <div class="dropdown dropdown-end">
+          <div tabindex="0" role="button" class="flex items-center text-white text-xl gap-3 cursor-pointer">
+            <img src="/user.png" alt="User avatar" class="w-8 h-8 rounded-full"/>
+            <span>{{ user.userName }}</span>
+          </div>
+          <ul tabindex="0" class="dropdown-content dropdown-end menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
+            <li><a>Edit profile</a></li>
+            <li><a (click)="logout()">Logout</a></li>
+          </ul>
+        </div>
+      } @else {
+        <form #loginForm="ngForm" (ngSubmit)="login()" class="flex items-center gap-3">
+          <input [(ngModel)]="creds.email" name="email" type="text" placeholder="Email" class="input">
+          <input [(ngModel)]="creds.password" name="password" type="password" placeholder="Password" class="input">
+          <button type="submit" class="btn">Login</button>
+        </form>
+      }
     </div>
   </div>
 </header>
